--- a/package.json
+++ b/package.json
@@ -41,9 +41,6 @@
     "aws-sdk": "^2.41.0",
     "better-queue": "^3.8.5",
     "pino": "^4.2.4",
-    "pump": "^1.0.2",
-    "split2": "^2.1.1",
-    "through2": "^2.0.3",
-    "vasync": "^1.6.4"
+    "through2": "^2.0.3"
   }
 }
