--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "scripts": {
     "test": "make test"
   },
+  "bin": {
+    "cloudwatchlogger":"./bin/cloudwatchlogger.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/rajatkumar/cloudwatchlogger"
@@ -40,7 +43,10 @@
   "dependencies": {
     "aws-sdk": "^2.41.0",
     "better-queue": "^3.8.5",
+    "commander": "^2.9.0",
     "pino": "^4.2.4",
+    "pump": "^1.0.2",
+    "split2": "^2.1.1",
     "through2": "^2.0.3"
   }
 }
